--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>J Query</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-  <script src='main.js'></script>
 
 
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
@@ -26,10 +25,10 @@
 <body>
   <img src="Logo.png" height="67.5" width="90px">
     <nav>
-    <button>Home</button>
-    <button>Volunteer</button>
-    <button>Donate</button>
-    <button>FAQ</button>
+      <button onclick="window.location.href='https://smith2067.github.io/Jquery-home/';">Home</button>
+      <button onclick="window.location.href='https://smith2067.github.io/Jquery-volunteer/';">Volunteer</button>
+      <button onclick="window.location.href='https://smith2067.github.io/Jquery-donate/';">Donate</button>
+      <button onclick="window.location.href='https://smith2067.github.io/Jquery-faq/;">FAQ</button>
     </nav>
 
     <header>
